// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeafletContainer LeafletContainer snapshot should render correct 1`] = `
<MapLeaflet
  baseLayer={
    Object {
      "baseLayerOptions": Object {
        "bounds": Array [
          Array [
            52.25168,
            4.64034,
          ],
          Array [
            52.50536,
            5.10737,
          ],
        ],
        "maxZoom": 16,
        "minZoom": 8,
        "subdomains": Array [
          "acc.t1",
          "acc.t2",
          "acc.t3",
          "acc.t4",
        ],
        "tms": true,
      },
      "urlTemplate": "https://{s}.data.amsterdam.nl/topo_rd/{z}/{x}/{y}.png",
    }
  }
  brkMarkers={Array []}
  center={
    Array [
      0,
      0,
    ]
  }
  clusterMarkers={Array []}
  geoJsons={Array []}
  getLeafletInstance={[Function]}
  isLoading={false}
  isZoomControlVisible={true}
  layers={Array []}
  mapOptions={
    Object {
      "attributionControl": false,
      "bounceAtZoomLimits": false,
      "crs": NewClass {
        "R": 6378137,
        "_initHooksCalled": true,
        "_scales": Array [
          0.0002906436011904762,
          0.0005812872023809524,
          0.0011625744047619048,
          0.0023251488095238095,
          0.004650297619047619,
          0.009300595238095238,
          0.018601190476190476,
          0.03720238095238095,
          0.0744047619047619,
          0.1488095238095238,
          0.2976190476190476,
          0.5952380952380952,
          1.1904761904761905,
          2.380952380952381,
          4.761904761904762,
          9.523809523809524,
          19.047619047619047,
        ],
        "code": "EPSG:28992",
        "distance": [Function],
        "infinite": false,
        "options": Object {
          "bounds": Object {
            "max": Object {
              "x": 595301.9199999999,
              "y": 903301.9199999999,
            },
            "min": Object {
              "x": -285401.92,
              "y": 22598.08,
            },
          },
          "origin": Array [
            -285401.92,
            22598.08,
          ],
          "resolutions": Array [
            3440.64,
            1720.32,
            860.16,
            430.08,
            215.04,
            107.52,
            53.76,
            26.88,
            13.44,
            6.72,
            3.36,
            1.68,
            0.84,
            0.42,
            0.21,
            0.105,
            0.0525,
          ],
        },
        "projection": NewClass {
          "_initHooksCalled": true,
          "_proj": Object {
            "forward": [Function],
            "inverse": [Function],
            "oProj": Projection {
              "C": 1.0004758566842447,
              "K": 1.0037810841627226,
              "R2": 2.001645629371303,
              "a": 6377397.155,
              "axis": "enu",
              "b": 6356078.962818189,
              "cosc0": 0.6139946047171645,
              "datum": Object {
                "a": 6377397.155,
                "b": 6356078.962818189,
                "datum_params": Array [
                  565.2369,
                  50.0087,
                  465.658,
                  -0.0000019725000000000023,
                  0.0000017004000000000018,
                  -0.000009067700000000022,
                  1.0000040812,
                ],
                "datum_type": 2,
                "ep2": 0.006719218799174659,
                "es": 0.006674372231802045,
              },
              "datum_params": Array [
                565.2369,
                50.0087,
                465.658,
                -0.406857330322398,
                0.350732676542563,
                -1.8703473836068,
                4.0812,
              ],
              "e": 0.0816968312225269,
              "ellps": "bessel",
              "ep2": 0.006719218799174659,
              "es": 0.006674372231802045,
              "forward": [Function],
              "init": [Function],
              "inverse": [Function],
              "k0": 0.9999079,
              "lat0": 0.9102967268932393,
              "long0": 0.09403203751960008,
              "names": Array [
                "Stereographic_North_Pole",
                "Oblique_Stereographic",
                "Polar_Stereographic",
                "sterea",
                "Oblique Stereographic Alternative",
                "Double_Stereographic",
              ],
              "no_defs": true,
              "phic0": 0.9096847567446857,
              "projName": "sterea",
              "ratexp": 0.04086785360287287,
              "rc": 1.0008228146856515,
              "rf": 299.1528128,
              "sinc0": 0.7893102212553775,
              "sphere": undefined,
              "title": "Oblique Stereographic Alternative",
              "units": "m",
              "x0": 155000,
              "y0": 463000,
            },
          },
          "bounds": Object {
            "max": Object {
              "x": 595301.9199999999,
              "y": 903301.9199999999,
            },
            "min": Object {
              "x": -285401.92,
              "y": 22598.08,
            },
          },
        },
        "transformation": Object {
          "_a": 1,
          "_b": 285401.92,
          "_c": -1,
          "_d": 22598.08,
        },
      },
      "maxBounds": Array [
        Array [
          52.25168,
          4.64034,
        ],
        Array [
          52.50536,
          5.10737,
        ],
      ],
      "maxBoundsViscosity": 1,
      "zoomControl": false,
    }
  }
  markers={Array []}
  onClick={[Function]}
  onDragEnd={[Function]}
  onResizeEnd={[Function]}
  onZoomEnd={[Function]}
  rdGeoJsons={Array []}
  scaleControlOptions={
    Object {
      "imperial": false,
      "metric": true,
      "position": "bottomright",
    }
  }
  zoom={8}
  zoomControlOptions={
    Object {
      "position": "bottomright",
      "zoomInTitle": "Inzoomen",
      "zoomOutTitle": "Uitzoomen",
    }
  }
/>
`;

exports[`LeafletContainer LeafletContainer snapshot should render different baseLayer, zoom, center and an active layer 1`] = `
<MapLeaflet
  baseLayer={
    Object {
      "baseLayerOptions": Object {
        "bounds": Array [
          Array [
            52.25168,
            4.64034,
          ],
          Array [
            52.50536,
            5.10737,
          ],
        ],
        "maxZoom": 16,
        "minZoom": 8,
        "subdomains": Array [
          "acc.t1",
          "acc.t2",
          "acc.t3",
          "acc.t4",
        ],
        "tms": true,
      },
      "urlTemplate": "https://{s}.data.amsterdam.nl/topo_rd/{z}/{x}/{y}.png",
    }
  }
  brkMarkers={Array []}
  center={
    Array [
      52.4333137,
      4.9108908,
    ]
  }
  clusterMarkers={
    Array [
      Object {
        "index": 0,
        "position": Array [
          52.37282671970971,
          4.883399484657262,
        ],
        "type": "detailPointType",
      },
      Object {
        "index": 1,
        "position": Array [
          52.37282671970951,
          4.883399484657232,
        ],
        "type": "detailPointType",
      },
      Object {
        "index": 2,
        "position": Array [
          52.37282671970952,
          4.883399484657263,
        ],
        "type": "detailPointType",
      },
      Object {
        "index": 3,
        "position": Array [
          52.37282671971952,
          4.883399484657263,
        ],
        "type": "detailPointType",
      },
    ]
  }
  geoJsons={
    Array [
      Object {
        "geoJson": Object {
          "coordinates": Array [
            120983,
            487047,
          ],
          "type": "Point",
        },
        "id": "YE39",
        "type": "dataSelection",
      },
      Object {
        "geoJson": Object {
          "coordinates": Array [
            120983,
            487047,
          ],
          "type": "Point",
        },
        "id": "YE39",
        "type": "dataSelectionAlternate",
      },
    ]
  }
  getLeafletInstance={[Function]}
  isLoading={false}
  isZoomControlVisible={true}
  layers={Array []}
  mapOptions={
    Object {
      "attributionControl": false,
      "bounceAtZoomLimits": false,
      "crs": NewClass {
        "R": 6378137,
        "_initHooksCalled": true,
        "_scales": Array [
          0.0002906436011904762,
          0.0005812872023809524,
          0.0011625744047619048,
          0.0023251488095238095,
          0.004650297619047619,
          0.009300595238095238,
          0.018601190476190476,
          0.03720238095238095,
          0.0744047619047619,
          0.1488095238095238,
          0.2976190476190476,
          0.5952380952380952,
          1.1904761904761905,
          2.380952380952381,
          4.761904761904762,
          9.523809523809524,
          19.047619047619047,
        ],
        "code": "EPSG:28992",
        "distance": [Function],
        "infinite": false,
        "options": Object {
          "bounds": Object {
            "max": Object {
              "x": 595301.9199999999,
              "y": 903301.9199999999,
            },
            "min": Object {
              "x": -285401.92,
              "y": 22598.08,
            },
          },
          "origin": Array [
            -285401.92,
            22598.08,
          ],
          "resolutions": Array [
            3440.64,
            1720.32,
            860.16,
            430.08,
            215.04,
            107.52,
            53.76,
            26.88,
            13.44,
            6.72,
            3.36,
            1.68,
            0.84,
            0.42,
            0.21,
            0.105,
            0.0525,
          ],
        },
        "projection": NewClass {
          "_initHooksCalled": true,
          "_proj": Object {
            "forward": [Function],
            "inverse": [Function],
            "oProj": Projection {
              "C": 1.0004758566842447,
              "K": 1.0037810841627226,
              "R2": 2.001645629371303,
              "a": 6377397.155,
              "axis": "enu",
              "b": 6356078.962818189,
              "cosc0": 0.6139946047171645,
              "datum": Object {
                "a": 6377397.155,
                "b": 6356078.962818189,
                "datum_params": Array [
                  565.2369,
                  50.0087,
                  465.658,
                  -0.0000019725000000000023,
                  0.0000017004000000000018,
                  -0.000009067700000000022,
                  1.0000040812,
                ],
                "datum_type": 2,
                "ep2": 0.006719218799174659,
                "es": 0.006674372231802045,
              },
              "datum_params": Array [
                565.2369,
                50.0087,
                465.658,
                -0.406857330322398,
                0.350732676542563,
                -1.8703473836068,
                4.0812,
              ],
              "e": 0.0816968312225269,
              "ellps": "bessel",
              "ep2": 0.006719218799174659,
              "es": 0.006674372231802045,
              "forward": [Function],
              "init": [Function],
              "inverse": [Function],
              "k0": 0.9999079,
              "lat0": 0.9102967268932393,
              "long0": 0.09403203751960008,
              "names": Array [
                "Stereographic_North_Pole",
                "Oblique_Stereographic",
                "Polar_Stereographic",
                "sterea",
                "Oblique Stereographic Alternative",
                "Double_Stereographic",
              ],
              "no_defs": true,
              "phic0": 0.9096847567446857,
              "projName": "sterea",
              "ratexp": 0.04086785360287287,
              "rc": 1.0008228146856515,
              "rf": 299.1528128,
              "sinc0": 0.7893102212553775,
              "sphere": undefined,
              "title": "Oblique Stereographic Alternative",
              "units": "m",
              "x0": 155000,
              "y0": 463000,
            },
          },
          "bounds": Object {
            "max": Object {
              "x": 595301.9199999999,
              "y": 903301.9199999999,
            },
            "min": Object {
              "x": -285401.92,
              "y": 22598.08,
            },
          },
        },
        "transformation": Object {
          "_a": 1,
          "_b": 285401.92,
          "_c": -1,
          "_d": 22598.08,
        },
      },
      "maxBounds": Array [
        Array [
          52.25168,
          4.64034,
        ],
        Array [
          52.50536,
          5.10737,
        ],
      ],
      "maxBoundsViscosity": 1,
      "zoomControl": false,
    }
  }
  markers={
    Array [
      Object {
        "position": Array [
          52.37282671970971,
          4.883399484657262,
        ],
        "type": "geoSearchType",
      },
      Object {
        "position": Array [
          52.37282671970951,
          4.883399484657232,
        ],
        "type": "detailPointType",
      },
      Object {
        "iconData": 15,
        "position": Array [
          52.37282671970952,
          4.883399484657263,
        ],
        "type": "dataSelectionType",
      },
      Object {
        "position": Array [
          52.37282671971952,
          4.883399484657263,
        ],
        "type": "panoramaPersonType",
      },
      Object {
        "heading": 45,
        "position": Array [
          52.37282671971952,
          4.883399484657263,
        ],
        "type": "panoramaOrientationType",
      },
    ]
  }
  onClick={[Function]}
  onDragEnd={[Function]}
  onResizeEnd={[Function]}
  onZoomEnd={[Function]}
  rdGeoJsons={
    Array [
      Object {
        "geoJson": Object {
          "coordinates": Array [
            120983,
            487047,
          ],
          "type": "Point",
        },
        "id": "YE39",
      },
    ]
  }
  scaleControlOptions={
    Object {
      "imperial": false,
      "metric": true,
      "position": "bottomright",
    }
  }
  zoom={10}
  zoomControlOptions={
    Object {
      "position": "bottomright",
      "zoomInTitle": "Inzoomen",
      "zoomOutTitle": "Uitzoomen",
    }
  }
/>
`;
